--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Banner include goes here -->
   <!--#include virtual="/include/banner.html" -->
   <!-- ****** PAGE CONTENT GOES HERE -->
-  <h2 class="afterfibre">Map of African Terrestrial Fibre Networks</h2>
+  <h2 class="afterfibre">Map of African Terrestrial and Undersea Fibre Networks</h2>
   <div id='cartodb-map'></div>
 
   <!-- Footer include here -->
