experimenting with interactivity

--- a/af_dev.html
+++ b/af_dev.html
@@ -165,7 +165,7 @@
 
 
           var aftTooltip = new cdb.geo.ui.Tooltip({
-              layer: layer,
+              layer: aftLayer,
               template: '<div class="cartodb-tooltip-content-wrapper"> <div class="rTable"><div class="rTableRow"><div class="rTableCell"><img src="/flag/{{iso2}}.png"></div><div class="rTableCellTitle"><h4 style="font-size: larger;"><a href="{{weburl}}" target="_blank">{{operator}}</a></h4></div></div></div></div>', 
               width: 200,
               position: 'bottom|right'
