--- a/af_dev.html
+++ b/af_dev.html
@@ -172,15 +172,30 @@
           cdb.vis.Vis.addInfowindow(map_object, aftLayer, ['cartodb_id','phase_name','operator','owner','orgname','iso2','country','go_live','weburl','source_url','type'], { infowindowTemplate: $('#aftinfo').html() });
           cdb.vis.Vis.addInfowindow(map_object, aucLayer, ['cartodb_id','capacity_g','name','inservice','notes','distance_k','url1','notlive'], { infowindowTemplate: $('#aucinfo').html() });
 
-          // set up legend  
+          // set up Undersea Cable legend
+          var aucLegend = new cdb.geo.ui.Legend.Choropleth({
+            title: "Undersea Fibre Optic Cables",
+            left:  "60Gbps",
+            right: "5Tbps",
+            colors: [ "#EDF8FB", "#D7FAF4", "#CCECE6", "#66C2A4", "#41AE76", "#238B45", "#005824" ]
+          });
+
+          // set up Terrestrial Fibre legend  
           var aftLegend = new cdb.geo.ui.Legend.Custom({
-            title: "Fibre Status",
+            title: "Terrestrial Fibre Status",
             data: [
               { name: "Live",               value: "#FF9900" },
               { name: "Under Construction", value: "#D6301D" }
             ]
           });
-          $('#cartodb-map').append(aftLegend.render().el);
+
+          // combine legends
+          var stackedLegend = new cdb.geo.ui.StackedLegend({
+           legends: [aftLegend, aucLegend]
+          });
+
+          // render legend on map
+          $('#cartodb-map').append(stackedLegend.render().el);
 
           // mouseover information for terrestrial fibre
           var aftTooltip = new cdb.geo.ui.Tooltip({
