--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
           // mouseover information for undersea fibre
           var aucTooltip = new cdb.geo.ui.Tooltip({
               layer: aucLayer,
-              template: '<div class="cartodb-tooltip-content-wrapper"><b>{{name}}</b></div>'
+              template: '<div class="cartodb-tooltip-content-wrapper"><b>{{name}}</b></div>',
+              width: 600,
+              height: 50,
+              position: 'bottom|right'
           });
           $('#cartodb-map').append(aucTooltip.render().el);
          
