--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <body>
   <div id='cartodb-map'></div>
-  <div id='nsrcTitle'><div id='mapTitle'>African Undersea and Terrestrial Fibre Optic Cables</div><a href="https://nsrc.org"><img src="/images/nsrc-main-logo-transparent.png"></a></div>
+  <div id='nsrcTitle'><div class='mapTitle'>African Undersea and Terrestrial Fibre Optic Cables</div><a href="https://nsrc.org"><img src="/images/nsrc-main-logo-transparent.png"></a></div>
   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
   <script type="text/javascript">
     function main() {
