--- a/af_dev.html
+++ b/af_dev.html
@@ -16,7 +16,6 @@
 
 
   <script type="infowindow/html" id="aftinfo">
-    var blah = {{country}}.replace(/\s+/g, '');
     <div class="cartodb-popup v2 orange">
       <a href="#close" class="cartodb-popup-close-button close">x</a>
       <div class="cartodb-popup-content-wrapper">
@@ -50,7 +49,7 @@
               <div class="rTableCellRight"><h4 style="color: green;">Source</h4></div><div class="rTableCell"><a href="{{source_url}}" target="_blank">map</a></div>
             </div>
             <div class="rTableRow">
-              <div class="rTableCellRight"><h4 style="color: green;">Contribute</h4></div><div class="rTableCell"><a href="http://twitter.com/home?status=%23AfTerFibre map for {{phase_name}} {{orgname}} needs updating! %23 blah" target="_blank">Tweet a correction!</a></div>
+              <div class="rTableCellRight"><h4 style="color: green;">Contribute</h4></div><div class="rTableCell"><a href="http://twitter.com/home?status=%23AfTerFibre map for {{phase_name}} {{orgname}} needs updating! %23{{country}}" target="_blank">Tweet a correction!</a></div>
             </div>            
             <p></p>
           </div>
@@ -109,7 +108,7 @@
 
             <h2>About AfTerFibre</h2>
 
-          <p>AfTerFibre or <i><span style="color: blue;">Af</span>rican <span style="color: blue;">Ter</span>restrial <span style="color: blue;">Fibre</span></i> is a map of African terrestrial (and now undersea) fibre optic infrastructure initiatives.  It was conceived of and developed by <a href="https://twitter.com/stevesong">Steve Song</a> with some initial support from Google and is now hosted and supported by the <a href="https://nsrc.org">Network Startup Resource Center</a></p>
+          <p>AfTerFibre or <i><span style="color: blue;">Af</span>rican <span style="color: blue;">Ter</span>restrial <span style="color: blue;">Fibre</span></i> is a map of African terrestrial (and now undersea) fibre optic infrastructure initiatives.  It was developed with some initial support from Google and is now hosted and supported by the <a href="https://nsrc.org">Network Startup Resource Center</a></p>
           <p>AfTerFibre is an Open Data initiative with data sources available for public download.  The dataset for the terrestrial fibre maps displayed can be <a href="https://afterfibre.cartodb.com/tables/af_fibrephase">downloaded in a variety of formats</a>, including CSV, SHP, KML, GEO JSON, and SVG</p>
           <p>Maps for AfTerFibre are typically sourced as raster images, sometimes from the corporate websites of operators, sometimes from studies or reports on regional infrastructure development, and sometimes through personal contacts.  Maps that are not already available on the web are uploaded to a <a href="https://www.flickr.com/photos/ssong/albums/72157627195113720">Flickr website</a>.  The raster images are then digitally traced and converted into GIS format and uploaded to the <a href="http://www.cartodb.com">CartoDB</a>, a cloud-based GIS platform.</p>
           <p>The source code for this website can be <a href="https://github.com/stevesong/nsrc-afterfibre/">found on Github</a> and is availabe under a <a href="https://en.wikipedia.org/wiki/GNU_General_Public_License">General Public License</a></p>
